--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ body{
     display: none;
 }
 .dropdown-menu .dropdown-item:hover {
-    background-color:blue;
+    background-color:#0080005c;
     color: white; 
 }
 
@@ -58,7 +58,7 @@ body{
 
 .form-control input:focus {
     outline: none;
-    border: 2px solid blue;
+    border: 2px solid #0080005c;
 }
 
 .form-control input:invalid:not(:focus):not(:placeholder-shown) {
@@ -82,7 +82,7 @@ body{
   .draggable {
     width: 100px;
     height: 100px;
-    background-color: #007BFF;
+    background-color: #0080005c;
     color: white;
     text-align: center;
     line-height: 100px;
@@ -226,7 +226,9 @@ li{
 }
 #navbarDropdown{
     font:1rem;
-    color: rgb(0, 255, 251);
+    /* color: rgb(0, 255, 251); */
+    color: green;
+    font-weight: bolder;
     text-transform: uppercase;
     text-shadow: #fff;
 } */
