--- a/css/profile.css
+++ b/css/profile.css
@@ -1,8 +1,6 @@
 body {
-    font-family:'Times New Roman', Times, serif;
-    overflow: hidden !important;
     font-family: 'Times New Roman', Times, serif;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .profile, .counts, .uploads {
@@ -95,8 +93,6 @@ tr {
     margin-top: 15px;
     color: green;
 }
-
-
 
 .pagination .page-item .page-link {
     margin: 0 5px;
