--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,8 @@
-/* css/style.css
-body {
-    font-family: Arial, sans-serif;
-}
-
-h2 {
-    color: #333;
-}
-
-form {
-    width: 300px;
-    margin: 50px auto;
-    
-}
-
-label {
-    display: block;
-    margin-bottom: 5px;
-    color: #333;
-}
-
-input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-}
-
-input[type="submit"] {
-    align-items: center;
-    background-color: #4caf50;
-    width: auto;
-    color: white;
-    cursor: pointer;
-}
-
-input[type="submit"]:hover {
-    background-color: #45a049;
-}
-.submit{
-    text-align: center;
-} */
-
 /* Fontawesome */
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
 
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -54,6 +12,7 @@ body {
     display: flex;
     height: 100vh;
     align-items: stretch;
+    flex-direction: column;
 }
 
 .left-section {
@@ -70,13 +29,12 @@ body {
 
 .login-container {
     background-color: rgba(255, 255, 255, 0.8);
-    padding:20px 40px;
+    padding: 20px 40px;
     border-radius: 15px;
     box-shadow: 0 10px 25px rgb(10 75 90);
     width: 100%;
     max-width: 450px;
 }
-
 
 .login-form h2 {
     color: #1324bc;
@@ -137,8 +95,6 @@ body {
     border: 2px solid #027186;
     border-radius: 3px;
     cursor: pointer;
-    background-color: #f7f7f7;
-    transition: background-color 0.3s, border-color 0.3s;
     background-color: #f7f7f7;
     transition: background-color 0.3s, border-color 0.3s;
     pointer-events: none;
@@ -242,27 +198,35 @@ button:hover {
     color: black;
     font-weight: bold;
 }
-.endline{
+
+.endline {
     color: darkblue;
-    text-align:center;
+    text-align: center;
 }
 
-.endline a{
-   
+.endline a {
     text-decoration: none;
     padding: 0 5px;
 }
-.logo{
+
+.logo {
     max-width: 50px; /* Set the maximum width for the logo */
     height: auto; /* Maintain aspect ratio */
-    border-radius: 50%; 
+    border-radius: 50%;
 }
 
-/*Responsive*/
+/* Responsive */
 @media screen and (min-width: 768px) {
+    .container {
+        flex-direction: row;
+    }
+
     .left-section {
         display: block;
-        /* Show the left section on larger screens */
+        flex: 1;
+    }
+
+    .right-section {
         flex: 1;
     }
 }
