--- a/css/profileeee.css
+++ b/css/profileeee.css
@@ -1,14 +1,113 @@
 body {
-    padding: 0 15px;
-  overflow-x: hidden !important;
+padding: 0 15px;
+  overflow-x: hidden;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    
 }
-
-
-.profile, .counts, .uploads {
-    margin: 20px;
+               
+.user {
+    display: inline-block;
+    margin-top: 30px;
+    margin-left: 35%;
+    padding: 10px 20px;
+    font-size: 18px;
+    color: white;
+    background: linear-gradient(45deg, #007bff, #0056b3);
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    cursor: pointer;
+    font-size: 30px;
+    transition: all 0.3s ease;
 }
+
+.user:hover {
+    background: linear-gradient(45deg, #0056b3, #007bff);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    transform: translateY(-2px);
+}
+
+.user:active {
+    transform: translateY(0);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+.profile-card .card-header img {
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.profile-card {
+    border-radius: 15px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    text-align: center;
+    position: relative;
+    margin-top: 50px;
+}
+
+.profile-card .profile-img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-top: -50px;
+    /* border: 5px solid #fff; */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.profile-card h2 {
+    margin-top: 10px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.profile-card p {
+    font-size: 30px;
+    display: flex;
+    margin-left: 25% !important;
+    /* color: #666; */
+    margin: 5px 0;
+}
+
+.profile-card .btn-outline-primary {
+    border-radius: 10px;
+    font-size: 26px;
+    color: black;
+    padding: 5px 15px;
+    border: 3px solid darkblue;
+}
+
+.profile-card .fas {
+    /* margin-top: 256px; */
+    font-size: 27px;
+    position: absolute;
+    margin-top: 15%;
+    margin-left: 381px;
+    /* margin-bottom: 43px; */
+}
+.profile-card .card-header {
+    background: linear-gradient(90deg, #1cb5e0 0%, #000851 100%);
+    height: 120px;
+    position: relative;
+}
+
+.profile-card .card-header img {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.profile-card .action-buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 15px;
+}
+
 
 .profile h2, .counts h2, .uploads h2 {
     margin-bottom: 10px;
@@ -43,13 +142,11 @@ body {
 
 #surveyTable th, .uploads th {
     font-size: 14px;
-    background-color: #0080005c;
+    /* background-color: #0080005c; */
     font-weight: bold;
 }
 
-#surveyTable td, .uploads td {
-    font-size: 12px;
-}
+
 
 tr {
     border: 1px solid #bbb;
@@ -64,19 +161,17 @@ tr {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
     background-color: #fefefe;
-    margin: 5% auto;
+    margin: 15% auto;
+    padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    height: 70%;
-    max-width: 800px;
-    position: relative;
+    height: 80%;
 }
-
 .close {
     color: #aaa;
     float: right;
@@ -91,19 +186,18 @@ tr {
     cursor: pointer;
 }
 
-.pagination {
+/* .pagination {
     display: flex;
     justify-content: center;
     margin-top: 15px;
-    color: green;
-}
+    
+} */
 
 
 
-.pagination .page-item .page-link {
+.pagination .page-item {
+    display: inline-block;
     margin: 0 5px;
-    padding: 5px 10px;
-    cursor: pointer;
 }
 .profile, .counts, .uploads {
     margin: 20px;
@@ -111,12 +205,7 @@ tr {
 
 .profile h2, .counts h2, .uploads h2 {
     margin-bottom: 10px;
-}
-.uploads {
-    width: 100%;
-    margin: auto;
-    text-align: center;
-    margin-top: 20px;
+    margin-left: 1%;
 }
 
 .uploads h2 {
@@ -162,15 +251,15 @@ tr {
 
 
 .card {
-width: 100%;
-margin-top: 81px;
-position: sticky;
-border: 4px solid #0080005c;
-border-radius: 15px;
-margin-bottom: -35px;
-margin-top: 5px;
-
-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    width: 186%;
+    margin-top: 81px;
+    position: sticky;
+    /* border: 4px solid #0080005c; */
+    border-radius: 15px;
+    /* margin-bottom: -35px; */
+    margin-top: 65px;
+    margin-left: -42%;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 .card-body {
     padding: 20px;
@@ -221,8 +310,10 @@ background-color: gray;
 }
 
 #uploadTable th{
-font-size: 35px;
-background-color: #0080005c;
+    font-size: 35px;
+    background-color: #E9E9F7 !important;
+    color: darkblue !important;
+   
 }
 a {
 color: #28a745;
@@ -236,13 +327,11 @@ overflow-x: auto;
 
 
 }
-.profile-img {
-    width: 13%;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-top: -45px;
-    margin-left: -49px;
+.profile-card {
+    display: none;
 }
+
+
 .text-success {
 --bs-text-opacity: 1;
 font-size: 32px;
@@ -253,16 +342,16 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
     overflow-x: auto;
     
 }
-.profile-row {
+/* .profile-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
 
-}
+} */
 .pagination {
     display: flex;
     justify-content: center;
-    /* margin-left: 35%; */
+    margin-left: 5%;
 
 }
 
@@ -300,8 +389,124 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
 }
 
 .table-bordered th, .table-bordered td {
-    padding: 37px;
+    padding: 21px;
 }
-.table-responsive {
+.table-responsive-x {
     overflow-x: auto;
+    -webkit-overflow-scrolling: touch; /* Enables momentum scrolling in iOS */
 }
+
+.table-responsive-x table {
+    width: 100%;
+    border-collapse: collapse;
+}
+/* .fas .fa-arrow-left{
+position: absolute;
+    top: 66%;
+    margin-left: 5%;
+    z-index: 9999;
+} */
+
+@media (min-width: 992px) {
+    .user {
+        display: inline-block;
+        margin-top: 30px;
+        margin-left: 40%;
+        padding: 5px 10px;
+        font-size: 18px;
+        color: white;
+        background: linear-gradient(45deg, #007bff, #0056b3);
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        cursor: pointer;
+        font-size: 15px;
+        transition: all 0.3s ease;
+    }
+    
+    .profile h2, .counts h2, .uploads h2 {
+        margin-bottom: 6px;
+        margin-left: -2%;
+        font-size:  20px;
+    }
+    #uploadTable th{
+        font-size: 12px;
+        background-color: #E9E9F7 !important;
+        color: darkblue !important;
+       
+    }
+    #uploadTable td {
+        font-size: 12px;
+        overflow-x: auto;
+    }
+    
+    .table-bordered th, .table-bordered td {
+        padding: 15px;
+    }
+    .pagination .page-item .page-link {
+        margin: 0 5px;
+        padding: 5px 10px;
+        cursor: pointer;
+        font-size: 13px;
+        color: #0080005c;
+        border: 2px solid #0080005c;
+    }
+    .profile-card p {
+        font-size: 16px;
+        margin-left: 25% !important;
+        /* color: #666; */
+        margin: 5px 0;
+    }
+    .card {
+        width: 90%;
+        margin-top: 81px;
+        position: sticky;
+        /* border: 4px solid #0080005c; */
+        border-radius: 15px;
+        /* margin-bottom: -35px; */
+        margin-top: 15px;
+        margin-left: 10%;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    }
+    .profile-card .fas {
+        /* margin-top: 256px; */
+        font-size: 18px;
+        position: absolute;
+        margin-top: 6%;
+        margin-left: 100px;
+        /* margin-bottom: 43px; */
+    }
+    .profile-card .btn-outline-primary {
+        border-radius: 10px;
+        font-size: 18px;
+        border: 3px solid darkblue;
+        color: black;
+        padding: 5px 15px;
+    }
+    .profile-card .profile-img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        margin-top: -50px;
+        /* border: 5px solid #fff; */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    .uploads {
+        width: 100%;
+        margin: auto;
+        text-align: center;
+        margin-top: -20px;
+    }
+    .profile-card .card-header {
+        background: linear-gradient(90deg, #1cb5e0 0%, #000851 100%);
+        height: 53px;
+        position: relative;
+    }
+    .table-responsive-x table {
+        width: 50%;
+        border-collapse: collapse;
+    }
+}
+
+
