--- a/css/profileeee.css
+++ b/css/profileeee.css
@@ -311,7 +311,7 @@ background-color: gray;
 
 #uploadTable th{
     font-size: 35px;
-    background-color: #E9E9F7 !important;
+     !important;
     color: darkblue !important;
    
 }
