--- a/css/profileeee.css
+++ b/css/profileeee.css
@@ -310,8 +310,7 @@ background-color: gray;
 }
 
 #uploadTable th{
-    font-size: 35px;
-     !important;
+    font-size: 35px!important;
     color: darkblue !important;
    
 }
