--- a/css/profile.css
+++ b/css/profile.css
@@ -648,11 +648,7 @@ a{
 /* Extra large desktops */
 
 @media (min-width: 1440px) {
-    .btn {
-        font-size: 20px !important;
-        margin-right: -8% !important;
-        margin-top: -13px;
-    }
+   
     .card {
         height: 98%;
         width: 71%;
@@ -674,7 +670,9 @@ a{
     }
     .off-lg {
         font-size: 23px;
-        margin-left: 20px !;
+        position: fixed;
+        margin-left: 88%;
+        top: 10px;
     }
     .heading-lg {
         font-size: 18px;
