--- a/css/profileeee.css
+++ b/css/profileeee.css
@@ -4,6 +4,7 @@ padding: 0 15px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    
 }
+
 .fa{
     font-size: 33px;
     margin-left: 40px !important;
@@ -204,7 +205,9 @@ tr {
     border-collapse: collapse;
     /* table-layout: fixed;  */
 }
-
+.capitalize {
+    text-transform: capitalize;
+} 
 
 
 
