--- a/css/profileeee.css
+++ b/css/profileeee.css
@@ -154,7 +154,7 @@ tr {
     position: fixed;
     z-index: 1000;
     left: 0;
-    top: 0;
+    top: -10px;
     width: 100%;
     height: 100%;
     overflow: auto;
@@ -164,10 +164,10 @@ tr {
 .modal-content {
     background-color: #fefefe;
     margin: 15% auto;
-    padding: 20px;
+    padding: 0px;
     border: 1px solid #888;
-    width: 80%;
-    height: 80%;
+    width: 50%;
+    height: 50%;
 }
 .close {
     color: #aaa;
