--- a/css/profileeee.css
+++ b/css/profileeee.css
@@ -4,6 +4,10 @@ padding: 0 15px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    
 }
+.occupation-text span {
+    text-transform: capitalize;
+}
+
 .fa{
     font-size: 33px;
     margin-left: 40px !important;
@@ -516,6 +520,9 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
         font-size: 12px;
         border: 2px solid darkblue;
     }
+    .capitalize::first-letter {
+        text-transform: uppercase;
+    }
 }
 @media (min-width: 1200px) {
     #toggleProfileCardBtn .icon {
@@ -636,6 +643,8 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
         justify-content: space-evenly;
         margin-top: 10px;
     }
-   
+    .capitalize::first-letter {
+        text-transform: uppercase;
+    }
 
 }
