--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .container {
@@ -66,15 +67,17 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 85px;
 }
 
 .login-container {
     background-color: rgba(255, 255, 255, 0.8);
-    padding:20px 40px;
+    padding: 20px 40px;
     border-radius: 15px;
     box-shadow: 0 10px 25px rgb(10 75 90);
-    width: 100%;
-    max-width: 450px;
+    margin-top: -100px;
+    width: 65%;
+   
 }
 
 
@@ -82,6 +85,7 @@ body {
     color: #1324bc;
     text-align: center;
     margin-bottom: 35px;
+    margin-top: -19px;
 }
 
 .login-title i {
@@ -96,19 +100,21 @@ body {
 
 .form-control i {
     position: absolute;
-    left: 15px;
-    top: 14px;
+    left: 4px;
+    top: 1px;
     color: #32495e;
 }
 
 .form-control input {
-    width: 100%;
+    width: 89%;
     max-width: 95%;
     padding: 12px 0 12px 37px;
     border: 2px solid #00569f1c;
     background-color: rgb(232, 232, 232);
     color: rgb(50, 73, 94);
     border-radius: 6px;
+    margin-left: -11px;
+    margin-top: -15px;
     transition: all 0.3s ease-in-out 0s;
 }
 
@@ -259,10 +265,114 @@ button:hover {
 }
 
 /*Responsive*/
-@media screen and (min-width: 768px) {
-    .left-section {
-        display: block;
-        /* Show the left section on larger screens */
-        flex: 1;
+
+
+/* mobile view */
+@media only screen and (min-device-width: 428px) 
+      {
+        .login-container {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px 40px;
+            border-radius: 15px;
+            box-shadow: 0 10px 25px rgb(10 75 90);
+            margin-top: -347px;
+            width: 65%;
+        }
+       }
+       @media only screen and (min-device-width: 390px) 
+      {
+        .login-container {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px 40px;
+            border-radius: 15px;
+            box-shadow: 0 10px 25px rgb(10 75 90);
+            margin-bottom: 200px;
+            margin-left: -3px;
+            width: 65%;
+        }
     }
-}
+        @media only screen and (min-device-width: 425px) 
+        {
+            .login-container {
+                background-color: rgba(255, 255, 255, 0.8);
+                padding: 20px 40px;
+                border-radius: 15px;
+                margin-bottom: 10px;
+                box-shadow: 0 10px 25px rgb(10 75 90);
+                margin-left: -3px;
+                width: 65%;
+            }
+      }
+      @media screen and (min-width: 768px) {
+        .login-container {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px 40px;
+            border-radius: 15px;
+           margin-top: 10px;
+            box-shadow: 0 10px 25px rgb(10 75 90);
+            margin-left: -3px;
+            width: 65%;
+        }
+        .form-control input {
+            width: 89%;
+            max-width: 95%;
+            padding: 12px 0 12px 37px;
+            border: 2px solid #00569f1c;
+            background-color: rgb(232, 232, 232);
+            color: rgb(50, 73, 94);
+            border-radius: 6px;
+            margin-left: -1px;
+            margin-top: -15px;
+            transition: all 0.3s ease-in-out 0s;
+        }
+        button {
+            width: 97%;
+            padding: 15px;
+            border: none;
+            border-radius: 12px;
+            background-color: green;
+            color: white;
+            font-size: 17px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+        
+        @media screen and (min-width: 992px) {
+            .login-container {
+                background-color: rgba(255, 255, 255, 0.8);
+                padding: 20px 40px;
+                border-radius: 15px;
+                margin-top: 10px;
+                box-shadow: 0 10px 25px rgb(10 75 90);
+                margin-left: -3px;
+                width: 49%;
+            }
+
+      }
+      @media screen and (min-width: 1200px) {
+        .login-container {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px 40px;
+            border-radius: 15px;
+            /* margin-top: 10px; */
+            box-shadow: 0 10px 25px rgb(10 75 90);
+            /* height: 50%; */
+            margin-left: -3px;
+            width: 25%;
+        }
+        
+        .login-form h2 {
+            color: #1324bc;
+            text-align: center;
+            margin-bottom: 35px;
+            margin-top: 12px;
+        }
+        
+  }
+
+
+
