--- a/css/profileeee.css
+++ b/css/profileeee.css
@@ -32,6 +32,13 @@ p {
     font-size: 45px ;
   
 }
+/* .contactnumber{
+    margin-left: -127px;
+
+}
+.occupation{
+    margin-left: -179px;
+} */
 
 .underlined {
     position: relative;
