--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ button:hover {
             padding: 20px 40px;
             border-radius: 15px;
             box-shadow: 0 10px 25px rgb(10 75 90);
-            margin-bottom: 200px;
+            /* margin-bottom: 200px; */
             margin-left: -3px;
             width: 65%;
         }
@@ -265,7 +265,7 @@ button:hover {
             background-color: rgba(255, 255, 255, 0.8);
             padding: 20px 40px;
             border-radius: 15px;
-           margin-top: 10px;
+           margin-top: -76px;
             box-shadow: 0 10px 25px rgb(10 75 90);
             margin-left: -3px;
             width: 65%;
@@ -303,7 +303,7 @@ button:hover {
                 background-color: rgba(255, 255, 255, 0.8);
                 padding: 20px 40px;
                 border-radius: 15px;
-                margin-top: 10px;
+                margin-top: -74px;
                 box-shadow: 0 10px 25px rgb(10 75 90);
                 margin-left: -3px;
                 width: 49%;
