--- a/css/index_new.css
+++ b/css/index_new.css
@@ -37,7 +37,7 @@ body {
     position: absolute;
     top: 15vh;
     left: 0;
-    height: 72vh;
+    height: 70vh;
     width: 94vw;
     z-index: 0;
     border-radius: 10px;
@@ -51,6 +51,11 @@ body {
     top: 34vh;
 }
 
+.map-container.live-location #map {
+    top: 7vh; /* Move map from top */
+    height: 78vh; /* Adjust map height */
+    transition: height 0.3s, top 0.3s; /* Ensure smooth transition */
+}
 
 .form-control input:focus {
     outline: none;
@@ -115,6 +120,7 @@ li {
     height: 18vh;
     top: -11px;
     font-size: 10px;
+    border: 2px solid darkblue;
 }
 
 /* Toggle Switch Container */
@@ -324,10 +330,11 @@ li {
 .form-group select,
 .form-group input {
     flex: 1;
-    padding: 4px;
+    padding: 2px;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
+    border: 1px solid darkblue;
 }
 
 .next-button {
@@ -335,6 +342,7 @@ li {
 }
 
 /* code for new index design */
+
 .location-wrapper {
     display: flex;
     align-items: center;
@@ -348,8 +356,9 @@ li {
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 50px;
-    padding: 5px 10px;
+    padding: 1px 31px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border: 2px solid darkblue;
 }
 
 .location-input {
@@ -388,9 +397,14 @@ li {
 }
 
 .location-icon {
-    color: darkblue;
-    font-size: 33px;
-    margin-left: 27px; 
+    background-color: darkblue;
+    /* color: darkblue; */
+    /* font-size: 33px;*/
+    margin-left: 35px;
+    width: 28px;
+    height: 29px;
+    cursor: pointer;
+    border-radius: 50%;
 }
 
 .large-icon {
@@ -399,4 +413,25 @@ li {
 
 .card {
     display: none; 
+}
+.location-button span {
+    margin-right: 25px; 
+}
+.card {
+    position: relative;
+}
+
+.cancel-icon {
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    font-size: 15px;
+    cursor: pointer;
+    color: darkblue;
+}
+
+.leaflet-control-layers-expanded .leaflet-control-layers-list {
+    display: block;
+    position: relative;
+    font-size: 8px;
 }
